err/pycdas.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycdas'...
Compiling './lib/python3.5/site-packages/pycdas/json.py'...
***   File "./lib/python3.5/site-packages/pycdas/json.py", line 26
    if region.get(key) <> value: return False
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycdas/kernels'...
Compiling './lib/python3.5/site-packages/pycdas/kernels/Domain.py'...
***   File "./lib/python3.5/site-packages/pycdas/kernels/Domain.py", line 58
    if self['axis'] <> axis['axis']: return False
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pycdas/kernels/OperationsManager.py'...
***   File "./lib/python3.5/site-packages/pycdas/kernels/OperationsManager.py", line 31
    except TypeError, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycdas/kernels/internal'...
Compiling './lib/python3.5/site-packages/pycdas/messageParser.py'...
***   File "./lib/python3.5/site-packages/pycdas/messageParser.py", line 39
    print cdasOpManager.getCapabilitiesStr()
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pycdas/portal'...
Compiling './lib/python3.5/site-packages/pycdas/portal/cdas.py'...
***   File "./lib/python3.5/site-packages/pycdas/portal/cdas.py", line 52
    print err_msg
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycdas/shutdown.py'...
***   File "./lib/python3.5/site-packages/pycdas/shutdown.py", line 5
    print "Killing zombie workers: "
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pycdas/utilities.py'...
***   File "./lib/python3.5/site-packages/pycdas/utilities.py", line 130
    print title
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pycdas-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
